<resources>

    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_network_gallery">NetworkGalleryActivity</string>
    <string name="title_activity_sd_card_gallery">SdCardGalleryActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="section_format">Hello World from section: %1$d</string>


    <string name="action_voice_rec">action voice rec</string>
    <string name="action_location">action location</string>
    <string name="action_taxi">action taxi</string>
    <string name="action_change_colors">change style</string>


    <string name="app_name">PEEPAID</string>
    <string name="app_color">#FFA000</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="spash_splash">peepaid</string>
    <string name="title_activity_select_cat">SelectCat</string>
    <string name="further">For any other assistance please </string>
    <string name="clickhere">Click Here</string>
    <string name="dustbins">DUSTBINS</string>
    <string name="toilets">TOILETS</string>
    <string name="explore">&#xe60b;&#160;&#160;Explore by locality,landmark...</string>
    <string name="dummylogo">PeePaid</string>
    <string name="add_new">Add New</string>
    <string name="title_activity_search_locality">SearchLocality</string>
    <string name="title_activity_catalog_page">CatalogPage</string>
    <string name="title_activity_map_view">MapView</string>

    <string name="curr_loc">&#xe600;</string>
    <string name="add_dust">&#xe601;</string>
    <string name="back">&#xe602;</string>
    <string name="check">&#xe603;</string>
    <string name="cross">&#xe604;</string>
    <string name="sweep">&#xe605;</string>
    <string name="recy">&#xe606;</string>
    <string name="filter">&#xe607;</string>
    <string name="locat">&#xe608;</string>
    <string name="map">&#xe609;</string>
    <string name="rating">&#xe60a;</string>
    <string name="search">&#xe60b;</string>





    <string name="facebook">&#xf301;</string>
    <string name="gplus">&#xf3b0;</string>




    <string name="upload">&#xe60c;</string>
    <string name="take_photo">&#xe60d;</string>
    <string name="review">&#xe60e;</string>
    <string name="men">&#xe900;</string>
    <string name="women">&#xe901;</string>
    <string name="both">&#xe902;</string>
    <string name="star_in_circle">&#xe904;</string>
    <string name="premium">&#xe903;</string>
    <string name="edit">&#xe905;</string>


    //Vector Drawable
    <color name="google_red">#EA4335</color>
    <color name="google_yellow">#FF784F</color>
    <color name="google_blue">#DFDFDF</color>
    <color name="google_green">#F15F2F</color>

    <string-array name="google_glyph_strings">
        <item>M146.00,11.69 C 156.55,15.52 167.25,21.80 176.00,28.81 196.99,45.62 212.96,75.80 213.00,103.00 213.00,103.00 213.00,118.00 213.00,118.00 212.91,125.79 210.46,136.61 207.92,144.00 203.52,156.79 196.89,167.67 188.25,178.00 179.50,188.45 168.23,196.78 156.00,202.74 137.36,211.83 123.30,213.23 103.00,213.00 88.95,212.83 73.11,207.77 61.00,200.85 17.36,175.90 -3.48,127.53 10.43,79.00 21.80,39.31 54.99,12.98 95.00,6.43 110.93,4.46 130.90,6.21 146.00,11.69 Z</item>
        <item>M67.98,89.00 C 54.61,116.42 70.57,149.53 101.00,154.92 104.31,155.50 107.63,156.10 111.00,155.91 117.28,155.55 125.45,153.63 131.00,150.68 136.51,147.75 141.60,143.92 145.48,139.00 170.18,107.75 148.29,62.43 108.00,63.32 89.83,65.65 76.50,71.52 67.98,89.00 Z</item>
        <item>M13.00,144.00 C 17.03,155.78 24.86,168.77 33.17,178.00 38.32,183.72 43.84,188.51 50.00,193.10 61.98,202.04 62.98,198.38 63.00,209.00 63.00,209.00 63.00,282.00 63.00,282.00 63.00,283.87 63.13,287.03 62.43,288.71 61.20,291.63 52.81,297.92 50.00,300.20 50.00,300.20 24.00,321.42 24.00,321.42 18.83,325.66 13.04,331.27 7.00,334.00 7.00,334.00 7.00,122.00 7.00,122.00 7.00,122.00 13.00,144.00 13.00,144.00 Z</item>
    </string-array>

    <integer-array name="google_glyph_colors">
        <item>@color/google_yellow</item>
        <item>@color/google_blue</item>
        <item>@color/google_green</item>
    </integer-array>
    //Vector Drawable


    <!--search vala jhol-->

     <string name="lorem_1">
        Malviya Nagr
    </string>
    <string name="lorem_2">
        Saket
    </string>
    <string name="lorem_3">
        Sed pellentesque placerat quam, ut ultricies turpis feugiat a.
        Aliquam a volutpat risus.
    </string>
    <string name="title_activity_main22">Main22Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_filter">FilterActivity</string>
    <string name="title_activity_map">I AM HERE</string>
    <!--search vala jhol-->


    <string name="facebook_app_id">275917702756421</string>
    <string name="title_activity_main">MainActivity</string>


    <string name="play_services_error">Google Play services is not available.  This application will close.</string>
    <string name="close">Close</string>
    <string name="configuration_error">Error: the value of WEB_CLIENT_ID or SERVER_BASE_URL is not  set correctly. This will cause errors when requesting a server auth code.</string>
    <string name="cancelled">Cancelled</string>
    <string name="ok">OK</string>
    <string name="permission_not_granted">Unable to perform selected action because permissions were not granted.</string>
</resources>
