<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF784B">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/ll"

        android:layout_marginTop="30dp"
        android:orientation="vertical">
        <ImageView

            android:id="@+id/icons"
            android:layout_width="wrap_content"
            android:layout_height="180dp"
            android:gravity="center_horizontal"
            android:src="@drawable/icon_splash"/>
        <com.jlabs.peepaid.customcomponents.TextViewSplash
            android:text="@string/spash_splash"
            android:layout_width="wrap_content"

            android:textColor="#fff"

          android:layout_gravity="center_horizontal"
            android:id="@+id/temp"
            android:textSize="44sp"
            android:layout_height="wrap_content"/>
    </LinearLayout>




    <RelativeLayout
        android:layout_marginTop="50dp"
        android:id="@+id/fb"

       android:layout_above="@+id/google"
        android:layout_width="match_parent"
        android:layout_height="56dp">
        <com.facebook.login.widget.LoginButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:id="@+id/loginButton" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#fff"
            android:id="@+id/first"/>
        <com.jlabs.peepaid.customcomponents.MyIconFonts
            android:layout_width="56dp"
            android:layout_below="@+id/first"
            android:text="@string/facebook"
            android:textColor="#fff"
            android:gravity="center"
            android:textSize="22sp"
            android:layout_height="match_parent"
            android:scaleType="center"
            android:background="#3B68BA"
            android:id="@+id/icon"
        />
        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#fff"
            android:id="@+id/third"
            android:layout_toRightOf="@+id/icon"
            android:layout_below="@+id/first"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#fff"
            android:layout_below="@+id/icon"
            android:id="@+id/secnd"/>
        <com.jlabs.peepaid.customcomponents.TextViewModernM
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#3B68BA"
            android:gravity="center"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:text="Login with Facebook"
            android:layout_toRightOf="@+id/third"
            android:layout_below="@+id/first"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/google"

        android:layout_marginBottom="40dp"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="56dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"

            android:background="#fff"
            android:id="@+id/first1"/>
        <com.jlabs.peepaid.customcomponents.MyIconFonts
            android:layout_width="56dp"
            android:textColor="#fff"
            android:text="@string/gplus"
            android:gravity="center"
            android:textSize="22sp"
            android:layout_below="@+id/first1"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:scaleType="center"
            android:background="#DA4835"
            android:id="@+id/icon1"
            />
        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#fff"
            android:id="@+id/third1"
            android:layout_toLeftOf="@+id/icon1"
            android:layout_below="@+id/first1"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#fff"
            android:layout_below="@+id/icon1"
            android:id="@+id/secnd1"/>
        <com.jlabs.peepaid.customcomponents.TextViewModernM
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#DA4835"
            android:textSize="25sp"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="Login with Google +"
            android:layout_toLeftOf="@+id/third1"
            android:layout_below="@+id/first1"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="#fff"
            android:id="@+id/fourth"/>
    </RelativeLayout>


</RelativeLayout>
