<android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

    android:paddingLeft="1dp"
    android:paddingTop="1dp"
    android:layout_margin="1dp"
    android:paddingRight="1dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="?attr/selectableItemBackground"
            android:gravity="center">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="150dp">

                <ImageView
                    android:id="@+id/thumbnail"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:background="#aaa"
                    android:scaleType="centerCrop"
                    >
                </ImageView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:background="@drawable/black_film"/>
                <LinearLayout

                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:visibility="gone"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/review_photo"
                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:textColor="@color/white"
                        android:shadowColor="@color/text_shadow"
                        android:shadowDx="1"
                        android:shadowDy="1"
                        android:shadowRadius="2"
                        android:textSize="13sp"
                        android:layout_height="wrap_content"
                        android:text="6"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:visibility="gone"
                    android:layout_gravity="right|top"
                    android:gravity="center"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rating"
                        android:shadowColor="@color/text_shadow"
                        android:shadowDx="1"
                        android:shadowDy="1"
                        android:shadowRadius="2"
                        android:textSize="16sp"
                        />
                    <TextView
                        android:id="@+id/rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:shadowColor="@color/text_shadow"
                        android:shadowDx="1"
                        android:shadowDy="1"
                        android:shadowRadius="2"
                        android:layout_marginLeft="8dp"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_gravity="bottom|left"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">
                    <com.jlabs.peepaid.customcomponents.TextViewModernM
                        android:id="@+id/text_location"
                        android:layout_width="wrap_content"
                        android:paddingBottom="10dp"
                        android:text="D Block,Saket, New Delhi 11067"
                        android:layout_marginLeft="8dp"
                        android:textColor="@color/white"
                        android:shadowColor="@color/text_shadow"
                        android:shadowDx="1"
                        android:shadowDy="1"
                        android:shadowRadius="2"
                        android:textSize="18sp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="5dp"
                        android:visibility="gone"
                        android:layout_marginBottom="5dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/recy"
                            android:shadowColor="@color/text_shadow"
                            android:shadowDx="1"

                            android:shadowDy="1"
                            android:shadowRadius="2"
                            android:textSize="16sp"
                            android:layout_marginLeft="10dp"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sweep"
                            android:shadowColor="@color/text_shadow"
                            android:shadowDx="1"
                            android:shadowDy="1"
                            android:shadowRadius="2"
                            android:textSize="16sp"
                            android:layout_marginLeft="10dp"
                            />
                    </LinearLayout>
                </LinearLayout>
            </FrameLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="48dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:textSize="15sp"
                    android:id="@+id/info"
                    android:text="Information" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/info"
                    android:textSize="12sp"
                    android:paddingLeft="5dp"
                    android:paddingBottom="5dp"
                    android:text="Review/Ratings"/>
                <com.jlabs.peepaid.customcomponents.TextView_Black
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/info"
                    android:textSize="12sp"
                    android:id="@+id/rat"
                    android:layout_alignParentRight="true"
                    android:paddingRight="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/rating"/>
                <com.jlabs.peepaid.customcomponents.TextView_Black
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:id="@+id/dist"
                    android:layout_alignParentRight="true"
                    android:paddingRight="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/locat"/>

            </RelativeLayout>



        </LinearLayout>

    </android.support.v7.widget.CardView>
